# modules_problem

./: CMakeLists.txt  CMakeSettings.json  README.md
A/: CMakeLists.txt
A/modules/: Vector.ixx
B/: CMakeLists.txt  main.cpp
B/inc/: file.h
